--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,17 @@
     </ng-container>
   </div>
 
+  <div [ngClass]="{'active':sound}" class="box menu music" (click)="soundToggle()">
+    <div *ngIf="!sound">
+      <div class="note off">🎵</div>
+      <div>{{ 'MUSIC.OFF' | translate }}</div>
+    </div>
+    <div *ngIf="sound">
+      <div class="note">🎵</div>
+      <div>{{ 'MUSIC.ON' | translate }}</div>
+    </div>
+  </div>
+
   <!--  tutorial -->
   <div [ngClass]="{'active':showTutorial}" class="box menu tutorial" (click)="tutorialToggleClick()">
     <ng-container *ngIf="!showTutorial">{{ 'TUTORIAL.SHOW' | translate }}</ng-container>
