--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,7 +70,7 @@
       </div>
     </div>
 
-    <a href="./static/privacy.html" target="_blank">
+    <a href="https://doomscroll.xyz/privacy" target="_blank">
       <div class="box menu privacy">
         <div class="item">{{ 'PRIVACY' | translate }}</div>
       </div>
@@ -266,7 +266,7 @@
           <share-buttons [theme]="'modern-dark'"
                          [include]="['whatsapp', 'sms']"
                          [show]="5"
-                         [url]="'https://doomscroll.xyz'"
+                         [url]="'https://play.doomscroll.xyz'"
                          [description]="'GAME.SHARE_DESCRIPTION' | translate:shareContent(level.num, getPoints())"
                          [tags]="'doomscroll'">
           </share-buttons>
